[project]
name = "comfyui-glifnodes"
description = "Custom set of nodes used by glif.app. With glif you can build mini apps that are powered by custom comfy workflows."
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers==0.24.0"]

[project.urls]
Repository = "https://github.com/glifxyz/ComfyUI-GlifNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dham"
DisplayName = "ComfyUI-GlifNodes"
Icon = "🇬"
